skeleton framework. add content.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <title>Quinn Milionis</title>
 
-    <!--  Skeleton and Font-Awesome -->
+    <!--  Skeleton Boilerplate and Font-Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+    <div class = "container">
+
+
     <section id ="main">
         <span class="avatar"><img src="images/avatar.png" alt="" /></span>
 
@@ -20,9 +24,10 @@
 
 
         <ul class="icons">
-            <li><a href="http://www.github.com/quinnmil" class="fa-github">GitHub</a></li>
-            <li><a href="#" class="fa-linkedin">LinkedIn</a></li>
-            <li><a href="#" class="fa-file"><span>Resume</span></a></li>
+            <a href = "http://github.com/quinnmil"<i class ="fab fa-github"></i></a>
+            <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin-in"></i></a>
+            <a href="www.linkedin.com/in/quinn-milionis" <i class="fas fa-file"></i></a>
+
         </ul>
 
       <div class = "about">
@@ -30,21 +35,63 @@
           <p> Hello world! I’m Quinn, a senior Computer Science student at the University of Oregon. In addition to a B.S in CS, I’m a double major with a  degree in Economics and a minor in Business Adminstration. Since I was very young, I’ve been fascinated by technology interacts with our personal lives and larger society.  I hope to create products and services that allow people to live more productive, happier, and more fulfilling lives. My professional interests include data analysis, machine learning, and web development. I am currently applying to internships for the summer of 2019, and will be graduating the following fall.
           </p>
         </div>
-        <div class = "skills">
-          <h3> Technical Skills </h3>
-          <h4> Langauges: </h4> <p> Python, Java, C, C++, Javascript, HTML, CSS </p>
-          <h4> Web Technologies: </h4> <p> Flask, Express, Django, Node.js, RESTful API, MongoDB, BootStrap, Foundation, JQuery. </p>
-          <h4> Development and Production tools: </h4> <p> Git, Docker, AWS. </p>
-          <h4> Analytic Software: </h4> <p> STATA, numPy, mySQL, Tableau. </p>
 
+        <!-- skills -->
+        <div class = "skills">
+
+          <h3> Technical Skills </h3>
+          <div class = "row">
+            <div class ="three columns">
+              <h6> Langauges:
+              </div>
+            <div class ="nine columns">
+            </h6> <p> Python, Java, C, C++, Javascript, HTML, CSS </p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "three columns">
+          <h6> Web Technologies: </h6>
+            </div>
+          <div class = "nine columns">
+            <p> Flask, Express, Django, Node.js, RESTful API, MongoDB, BootStrap, Foundation, JQuery. </p>
+          </div>
         </div>
+        <div class = "row">
+          <div class = "three columns">
+          <h6> Development and Production tools: </h6>
+        </div>
+        <div class = "nine columns">
+          <p> Git, Docker, AWS. </p>
+        </div>
+      </div>
+      <div class = "row">
+        <div class = "three columns">
+          <h6> Analytic Software: </h6>
+          </div>
+        <div class = "nine columns">
+        <p> STATA, numPy, mySQL, Tableau. </p>
+      </div>
+    </div>
+  </div>
         <div class = "projects">
+
           <h3> Projects </h3>
+          <div class = "row">
+            <div class = "five columns">
+              <img src = "/images/socialMap.png"></img>
+            </div>
+            <div class = "seven columns">
+          <h5> Social Map </h5> <p> a social media mapping application in which
+            users can add pointers on a map with 'notes.' Developed with a small group
+            for a software methodology class.
+          </div>
+        </div>
           <p> site in progress </p>
         </div>
         <footer>
 						</footer>
     </section>
+  </div>
 
   </body>
 </html>
