update layout for improved mobile performace. Add project example.

--- a/index.html
+++ b/index.html
@@ -1,97 +1,128 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>Quinn Milionis</title>
 
-    <!--  Skeleton Boilerplate and Font-Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <title>Quinn Milionis</title>
 
-    <div class = "container">
+  <!--  Skeleton Boilerplate and Font-Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
 
-    <section id ="main">
-        <span class="avatar"><img src="images/avatar.png" alt="" /></span>
-
-        <h2> Quinn Milionis </h2>
-        <p> Computer Science / Economics <br> University of Oregon</p>
-        <p> site in progress </p>
+  <div class="container">
 
 
-        <ul class="icons">
-            <a href = "http://github.com/quinnmil"<i class ="fab fa-github"></i></a>
-            <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin-in"></i></a>
-            <a href="www.linkedin.com/in/quinn-milionis" <i class="fas fa-file"></i></a>
+    <section id="main">
+      <span class="avatar"><img src="images/avatar.png" alt="" /></span>
 
-        </ul>
+      <h2> Quinn Milionis </h2>
+      <p> Computer Science / Economics <br> University of Oregon</p>
+      <p> site in progress </p>
 
-      <div class = "about">
+
+      <ul class="icons">
+        <a href="http://github.com/quinnmil" <i class="fab fa-github"></i></a>
+        <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin-in"></i></a>
+        <a href="/assets/Resume.pdf" download <i class="fas fa-file"></i></a>
+
+      </ul>
+
+      <div class="about">
         <h3> about me </h3>
-          <p> Hello world! I’m Quinn, a senior Computer Science student at the University of Oregon. In addition to a B.S in CS, I’m a double major with a  degree in Economics and a minor in Business Adminstration. Since I was very young, I’ve been fascinated by technology interacts with our personal lives and larger society.  I hope to create products and services that allow people to live more productive, happier, and more fulfilling lives. My professional interests include data analysis, machine learning, and web development. I am currently applying to internships for the summer of 2019, and will be graduating the following fall.
-          </p>
-        </div>
+        <p> Hello world! I’m Quinn, a senior Computer Science student at the
+          University of Oregon. In addition to a B.S in CS, I’m a double major
+          with a degree in Economics and a minor in Business Adminstration.
+          Since I was very young, I’ve been fascinated by how technology
+          can influences our lives and larger society.
+          I hope to create products and services that allow people to live
+          more productive, happier, and more fulfilling lives. My professional
+          interests include data analysis, machine learning, and web
+          development. I am currently applying to internships for the summer
+          of 2019, and will be graduating the following fall.
+        </p>
+      </div>
 
-        <!-- skills -->
-        <div class = "skills">
+      <!-- skills -->
+      <div class="skills">
 
-          <h3> Technical Skills </h3>
-          <div class = "row">
-            <div class ="three columns">
-              <h6> Langauges:
-              </div>
-            <div class ="nine columns">
-            </h6> <p> Python, Java, C, C++, Javascript, HTML, CSS </p>
-            </div>
+        <h3> Technical Skills </h3>
+        <div class="row">
+          <div class="three columns">
+            <h6> Langauges: </h6>
           </div>
-          <div class = "row">
-            <div class = "three columns">
-          <h6> Web Technologies: </h6>
-            </div>
-          <div class = "nine columns">
-            <p> Flask, Express, Django, Node.js, RESTful API, MongoDB, BootStrap, Foundation, JQuery. </p>
+          <div class="nine columns">
+            <p> Python, Java, C, C++, Javascript, HTML, CSS </p>
           </div>
         </div>
-        <div class = "row">
-          <div class = "three columns">
-          <h6> Development and Production tools: </h6>
+        <div class="row">
+          <div class="three columns">
+            <h6> Web Technologies: </h6>
+          </div>
+          <div class="nine columns">
+            <p> Flask, Express, Django, Node.js, RESTful API, MongoDB,
+              BootStrap, Foundation, JQuery. </p>
+          </div>
         </div>
-        <div class = "nine columns">
-          <p> Git, Docker, AWS. </p>
+        <div class="row">
+          <div class="three columns">
+            <h6> Development and Production tools: </h6>
+          </div>
+          <div class="nine columns">
+            <p> Git, Docker, AWS. </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="three columns">
+            <h6> Analytic Software: </h6>
+          </div>
+          <div class="nine columns">
+            <p> STATA, numPy, mySQL, Tableau. </p>
+          </div>
         </div>
       </div>
-      <div class = "row">
-        <div class = "three columns">
-          <h6> Analytic Software: </h6>
-          </div>
-        <div class = "nine columns">
-        <p> STATA, numPy, mySQL, Tableau. </p>
-      </div>
-    </div>
-  </div>
-        <div class = "projects">
 
-          <h3> Projects </h3>
-          <div class = "row">
-            <div class = "five columns">
-              <img src = "/images/socialMap.png"></img>
-            </div>
-            <div class = "seven columns">
-          <h5> Social Map </h5> <p> a social media mapping application in which
-            users can add pointers on a map with 'notes.' Developed with a small group
-            for a software methodology class.
+      <div class="projects">
+        <h3> Projects </h3>
+        <div class="row">
+          <div class="five columns">
+            <img src="/assets/images/socialMap.png"></img>
+          </div>
+          <div class="seven columns">
+            <h5> Social Map </h5>
+            <p> a social media mapping application in which
+              users can add pointers on a map with 'notes.' Developed with a small
+              group for a software methodology class. My roles included integrating
+              the MapBox API with the
+            </p>
           </div>
         </div>
-          <p> site in progress </p>
+        <br>
+        <div class="row">
+          <div class="five columns">
+            <img src="/assets/images/todoTimer.png"></img>
+          </div>
+          <div class="seven columns">
+            <h5> Todo Timer </h5>
+            <p> A productivity applicaiton developed to gain
+              experience in Javascript and DOM manupulation. Uses the Pomodoro
+              productivity method. Created as a tool I wanted to actually use to
+              keep up with my busy scheudle. Ongoing project.
+            </p>
+          </div>
         </div>
-        <footer>
-						</footer>
+      </div>
+
+      <footer>
+        <p> site in progress </p>
+      </footer>
     </section>
   </div>
 
-  </body>
+</body>
+
 </html>
