fix header image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <section id="main">
-      <span class="avatar"><img src="images/avatar.png" alt="" /></span>
+      <span class="avatar"><img src="/assets/images/avatar.png" alt="" /></span>
 
       <h2> Quinn Milionis </h2>
       <p> Computer Science / Economics <br> University of Oregon</p>
