Add link to todoTimer and some gramerical changes.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
 
       <div class="about">
-        <h3> about me </h3>
+        <h3> About </h3>
         <p> Hello world! I’m Quinn, a senior Computer Science student at the
           University of Oregon. In addition to a B.S in CS, I’m a double major
           with a degree in Economics and a minor in Business Adminstration.
@@ -61,10 +61,10 @@
         </div>
         <div class="row">
           <div class="three columns">
-            <h6> Web Technologies: </h6>
+            <h6> Web Technologies/Frameworks: </h6>
           </div>
           <div class="nine columns">
-            <p> Flask, Express, Django, Node.js, RESTful API, MongoDB,
+            <p> Flask, Express, Django, Node.js, RESTful APIs, MongoDB,
               BootStrap, Foundation, JQuery. </p>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <h6> Development and Production tools: </h6>
           </div>
           <div class="nine columns">
-            <p> Git, Docker, AWS. </p>
+            <p> Git, Docker, AWS, Puppet </p>
           </div>
         </div>
         <div class="row">
@@ -81,7 +81,7 @@
             <h6> Analytic Software: </h6>
           </div>
           <div class="nine columns">
-            <p> STATA, numPy, mySQL, Tableau. </p>
+            <p> STATA, R, numPy, Tableau, mySQL. </p>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="seven columns">
             <h5> Social Map </h5>
-            <p> a social media mapping application in which
+            <p> A social media mapping application in which
               users can add pointers on a map with 'notes.' Developed with a small
               group for a software methodology class. My roles included integrating
               the MapBox API with the
@@ -112,6 +112,7 @@
               experience in Javascript and DOM manupulation. Uses the Pomodoro
               productivity method. Created as a tool I wanted to actually use to
               keep up with my busy scheudle. Ongoing project.
+              <a href="/todotimer.html"> Check it out. </a>
             </p>
           </div>
         </div>
