--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <title>Quinn Milionis</title>
 
-  <!--  Skeleton Boilerplate and Font-Awesome -->
+  <!--  Font, Skeleton Boilerplate and Font-Awesome icons-->
+  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -107,7 +108,7 @@
             <img src="/assets/images/todoTimer.png"></img>
           </div>
           <div class="seven columns">
-            <h5> Todo Timer </h5>
+            <h5> To-do Timer </h5>
             <p> A productivity applicaiton developed to gain
               experience in Javascript and DOM manupulation. Uses the Pomodoro
               productivity method. Created as a tool I wanted to actually use to
