fix broken link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <ul class="icons">
         <a href="http://github.com/quinnmil" <i class="fab fa-github"></i></a>
-        <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/in/quinn-milionis/" <i class="fab fa-linkedin-in"></i></a>
         <a href="/assets/Resume.pdf" download <i class="fas fa-file"></i></a>
 
       </ul>
