--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Quinn Milionis</title>
 
   <!--  Font, Skeleton Boilerplate and Font-Awesome icons-->
-  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,28 +23,28 @@
 
       <h2> Quinn Milionis </h2>
       <p> Computer Science / Economics <br> University of Oregon</p>
-      <p> site in progress </p>
-
 
       <ul class="icons">
-        <a href="http://github.com/quinnmil" <i class="fab fa-github"></i></a>
-        <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin-in"></i></a>
+        <a href="http://github.com/quinnmil" <i class="fab fa-github-square"></i></a>
+        <a href="www.linkedin.com/in/quinn-milionis" <i class="fab fa-linkedin"></i></a>
         <a href="/assets/Resume.pdf" download <i class="fas fa-file"></i></a>
+        <!-- <i class="fab fa-linkedin-in"></i> -->
+
 
       </ul>
 
       <div class="about">
         <h3> About </h3>
-        <p> Hello world! I’m Quinn, a senior Computer Science student at the
+        <p> I’m Quinn, a senior Computer Science student at the
           University of Oregon. In addition to a B.S in CS, I’m a double major
           with a degree in Economics and a minor in Business Adminstration.
           Since I was very young, I’ve been fascinated by how technology
           can influences our lives and larger society.
           I hope to create products and services that allow people to live
           more productive, happier, and more fulfilling lives. My professional
-          interests include data analysis, machine learning, and web
-          development. I am currently applying to internships for the summer
-          of 2019, and will be graduating the following fall.
+          interests include system design, data analysis, machine learning, and web
+          development. I am graduating this spring, and am always looking for
+          something interesting. Current working remotely for M Science, LLC.
         </p>
       </div>
 
@@ -53,42 +53,58 @@
 
         <h3> Technical Skills </h3>
         <div class="row">
-          <div class="three columns">
+          <div class="five columns">
             <h6> Langauges: </h6>
           </div>
-          <div class="nine columns">
-            <p> Python, Java, C, C++, Javascript, HTML, CSS </p>
+          <div class="seven columns">
+            <p> C, C++, Python, Java, Javascript, HTML, CSS </p>
           </div>
         </div>
         <div class="row">
-          <div class="three columns">
-            <h6> Web Technologies/Frameworks: </h6>
+          <div class="five columns">
+            <h6> Web Technologies // Frameworks: </h6>
           </div>
-          <div class="nine columns">
+          <div class="seven columns">
             <p> Flask, Express, Django, Node.js, RESTful APIs, MongoDB,
               BootStrap, Foundation, JQuery. </p>
           </div>
         </div>
         <div class="row">
-          <div class="three columns">
+          <div class="five columns">
             <h6> Development and Production tools: </h6>
           </div>
-          <div class="nine columns">
+          <div class="seven columns">
             <p> Git, Docker, AWS, Puppet </p>
           </div>
         </div>
         <div class="row">
-          <div class="three columns">
+          <div class="five columns">
             <h6> Analytic Software: </h6>
           </div>
-          <div class="nine columns">
-            <p> STATA, R, numPy, Tableau, mySQL. </p>
+          <div class="seven columns">
+            <p> DataBricks, R Studio, numPy, Apache Spark, pandas, SQL. </p>
           </div>
         </div>
       </div>
 
+      <!-- Projects -->
       <div class="projects">
         <h3> Projects </h3>
+        <div class="row">
+          <div class="five columns">
+            <img src="/assets/images/Monopoly.png"></img>
+          </div>
+          <div class="seven columns">
+            <h5> Monopoly </h5>
+            <p> An implementation of one of my favorite childhood boardgames
+              using C++ and the Qt toolkit. This project demonstrates my
+              proficiency in system design and architecture. Designed and
+              devloped for a final project in our C/C++ course, received full marks.
+              <a href="http://github.com/quinnmil/Monopoly"> Source </a>
+            </p>
+          </div>
+        </div>
+        <br>
         <div class="row">
           <div class="five columns">
             <img src="/assets/images/socialMap.png"></img>
@@ -98,7 +114,7 @@
             <p> A social media mapping application in which
               users can add pointers on a map with 'notes.' Developed with a small
               group for a software methodology class. My roles included integrating
-              the MapBox API with the
+              the MapBox API and handling user logins in the backend.
             </p>
           </div>
         </div>
@@ -112,8 +128,9 @@
             <p> A productivity applicaiton developed to gain
               experience in Javascript and DOM manupulation. Uses the Pomodoro
               productivity method. Created as a tool I wanted to actually use to
-              keep up with my busy scheudle. Ongoing project.
-              <a href="/todotimer.html"> Check it out. </a>
+              keep up with my busy scheudle. A small little app, but I'm hoping
+              to build this out in the future.
+              <!-- <a href="/todotimer.html"> Check it out. </a> -->
             </p>
           </div>
         </div>
