--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           University of Oregon. In addition to a B.S in CS, I’m a double major
           with a degree in Economics and a minor in Business Adminstration.
           Since I was very young, I’ve been fascinated by how technology
-          can influences our lives and larger society.
+          can influence our lives and larger society.
           I hope to create products and services that allow people to live
           more productive, happier, and more fulfilling lives. My professional
           interests include system design, data analysis, machine learning, and web
           development. I am graduating this spring, and am always looking for
-          something interesting. Current working remotely for M Science, LLC.
+          something interesting. Currently working remotely for M Science, LLC. 
         </p>
       </div>
 
