--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <p> I’m Quinn, a senior Computer Science student at the
           University of Oregon. In addition to a B.S in CS, I’m a double major
           with a degree in Economics and a minor in Business Adminstration.
-          Since I was very young, I’ve been fascinated by how technology
+          I’ve always been fascinated by how technology
           can influence our lives and larger society.
           I hope to create products and services that allow people to live
-          more productive, happier, and more fulfilling lives. My professional
+          happier, more productive, fulfilling lives. My professional
           interests include system design, data analysis, machine learning, and web
           development. I am graduating this spring, and am always looking for
-          something interesting. Currently working remotely for M Science, LLC. 
+          something interesting. Currently working remotely for M Science, LLC.
         </p>
       </div>
 
@@ -82,7 +82,7 @@
             <h6> Analytic Software: </h6>
           </div>
           <div class="seven columns">
-            <p> DataBricks, R Studio, numPy, Apache Spark, pandas, SQL. </p>
+            <p> Apache Spark, R Studio, numPy, Apache Spark, pandas, SQL. </p>
           </div>
         </div>
       </div>
