--- a/index.html
+++ b/index.html
@@ -35,19 +35,16 @@
 
       <div class="about">
         <h3> About </h3>
-        <p> I’m Quinn, currently working as a software engineer in Oregon.
-	        I graduated in the Spring of 2019 from the University of Oregon with
-          with a double B.S in Computer Science and Economics, along with a minor in Business Adminstration.
-          I belive that technology can enable people to live
-          happier, more productive, fulfilling lives. My professional
-          interests include embedded systems, fullstack mobile/webv development, and data analylitics. 
-          <br> 
-          I currently work with a small team of Software Engineers. Due to the size of the team, 
-          I've had the opportunity to hold many roles. My focus is largly on integrated systems,
-          where I leverage AWS service for and develop telemetry software for intenet-connected devices, as well 
-          as authoring tools to assist with the development and deployment process of our firmware. I have also 
-          contributed to development of a cross platform app using React Native, and work directly with departments 
-          throuout the company to create custom ERP tools and functionality.
+        <p> I’m Quinn, currently working as a software engineer in Oregon. I graduated in the Spring of 2019 from the University of Oregon 
+          with with a double B.S in Computer Science and Economics, along with a minor in Business Administration. I believe that 
+          technology can enable people to live happier, more productive, fulfilling lives. My professional interests include embedded
+          systems, full-stack mobile/web development, and data analytics. 
+        <br>
+          I currently work with a small team of Software Engineers. Due to the size of the team, I've had the opportunity to hold many roles. 
+          My focus is largely on integrated systems, where I integrate AWS services and develop telemetry software for internet-connected devices, 
+          as well as authoring tools to assist with the development and deployment process of our firmware. I have also contributed to development of 
+          a cross platform app using React Native, and work directly with departments throughout the company to create custom ERP tools and functionality.
+          
           
         </p>
       </div>
@@ -74,7 +71,7 @@
         </div>
         <div class="row">
           <div class="five columns">
-            <h6> Database // Business Technology </h6>
+            <h6> Database // Business Technology: </h6>
           </div>
           <div class="seven columns">
             <p>  SQL, PostgreSQL, MongoDB, Odoo</p>
