update resume and about me section

--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
   <!--  Font, Skeleton Boilerplate and Font-Awesome icons-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <div class="container">
-
-
     <section id="main">
       <span class="avatar"><img src="/assets/images/avatar.png" alt="" /></span>
 
       <h2> Quinn Milionis </h2>
-      <p> Software Engineer <br> B.S in Computer Science / Economics <br> Oregon</p>
+      <p> Software Engineer <br> B.S in Computer Science / Economics <br> PNW </p>
 
       <ul class="icons">
         <a href="http://github.com/quinnmil" <i class="fab fa-github-square"></i></a>
@@ -30,22 +29,31 @@
         <a href="/assets/Resume.pdf" download <i class="fas fa-file"></i></a>
         <!-- <i class="fab fa-linkedin-in"></i> -->
 
-
       </ul>
 
       <div class="about">
-        <h3> About </h3>
-        <p> I’m Quinn, currently working as a software engineer in Oregon. I graduated in the Spring of 2019 from the University of Oregon 
-          with with a double B.S in Computer Science and Economics, along with a minor in Business Administration. I believe that 
-          technology can enable people to live happier, more productive, fulfilling lives. My professional interests include embedded
-          systems, full-stack mobile/web development, and data analytics. 
-        <br>
-          I currently work with a small team of Software Engineers. Due to the size of the team, I've had the opportunity to hold many roles. 
-          My focus is largely on integrated systems, where I integrate AWS services and develop telemetry software for internet-connected devices, 
-          as well as authoring tools to assist with the development and deployment process of our firmware. I have also contributed to development of 
-          a cross platform app using React Native, and work directly with departments throughout the company to create custom ERP tools and functionality.
-          
-          
+        <h3> About me </h3>
+        <p>
+          I’m Quinn, a software engineer. Currently, I'm a "Senior Cloud Engineer" with Nike's Valiant Labs team.
+          My work focuses on API design, development, and deployment using modern cloud technologies. I have
+          professional experience with database noSQL database design,
+          (specializing in Dynamo single-tables), serverless deployments, CI/CD,
+          and scalable, highly performant services.
+          <br>
+          I'm passionate about clean, functional, maintainable code. I try never commit code that couldn't be
+          succinctly explained to a non-software engineer. I've authored coding standards and held demos on Node best
+          practices for my team.
+          I take pride in effective communicator, and utilize my experience in business and finance to facilitate
+          communication between business stakeholders and engineering teams.
+          <br>
+          I graduated in the Spring of 2019 from the University of Oregon
+          with a double B.S in Computer Science and Economics, along with a minor in Business Administration.
+          My proficiency with computer science fundamentals informs my industry work, where I am eager to both educate
+          and learn from those with different backgrounds.
+          <br>
+          Outside of work, I'm a casual mountaineer (With goals of checking off all of the major Cascade Volcanoes),
+          daring skier, and cautious motorcyclist. I'll take good conversation over anything,
+          and I'm always looking for that next mountain. So don't hesistate to reach out, and thanks for stopping by.
         </p>
       </div>
 
@@ -58,15 +66,15 @@
             <h6> Langauges: </h6>
           </div>
           <div class="seven columns">
-            <p> Python, C, C++, Java, Javascript, HTML, CSS, etc </p>
+            <p> Javascript/Node, Python, C, C++, Java, HTML/CSS, some C# </p>
           </div>
         </div>
         <div class="row">
           <div class="five columns">
-            <h6> Web Technologies // Frameworks: </h6>
+            <h6> Web Technologies // Framework Experience: </h6>
           </div>
           <div class="seven columns">
-            <p> React, React Native, Flask, Express, Vue.js, Django, Node.js, RESTful APIs, </p>
+            <p> RESTful APIs, Node.js, React, React Native, Flask, Express, Vue.js, Django</p>
           </div>
         </div>
         <div class="row">
@@ -74,7 +82,7 @@
             <h6> Database // Business Technology: </h6>
           </div>
           <div class="seven columns">
-            <p>  SQL, PostgreSQL, MongoDB, Odoo</p>
+            <p> DynamoDb, SQL, MongoDB, Odoo</p>
           </div>
         </div>
         <div class="row">
@@ -82,7 +90,8 @@
             <h6> DevOps tools: </h6>
           </div>
           <div class="seven columns">
-            <p> Bash Scripting, Git, Docker, AWS (Lambda, IOT), Puppet </p>
+            <p> CI/CD (Jenkins, Bitbucket Pipelines, Github Actions), Unix Administration/Bash scripting, Git, Docker,
+              AWS (Lambda, DynamoDB, API Gateway, ALB, EC2, CloudWatch, SNS/SQS, IOT Core), Puppet </p>
           </div>
         </div>
         <div class="row">
@@ -138,14 +147,12 @@
               productivity method. Created as a tool I wanted to actually use to
               keep up with my busy scheudle. A simple app, but I'm hoping
               to build this out in the future.
-              <!-- <a href="/todotimer.html"> Check it out. </a> -->
             </p>
           </div>
         </div>
       </div>
 
       <footer>
-        <!-- <p> site in progress </p> -->
       </footer>
     </section>
   </div>
