update avatar and refine

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="main">
       <span class="avatar"><img src="/assets/images/avatar.png" alt="" /></span>
 
-      <h2> Quinn Milionis </h2>
+      <h2 style=''> Quinn Milionis </h2>
       <p> Software Engineer <br> B.S in Computer Science / Economics <br> PNW </p>
 
       <ul class="icons">
@@ -40,16 +40,19 @@
           (specializing in Dynamo single-tables), serverless deployments, CI/CD,
           and scalable, highly performant services.
           <br>
+          <br>
           I'm passionate about clean, functional, maintainable code. I try never commit code that couldn't be
           succinctly explained to a non-software engineer. I've authored coding standards and held demos on Node best
           practices for my team.
           I take pride in effective communicator, and utilize my experience in business and finance to facilitate
           communication between business stakeholders and engineering teams.
           <br>
+          <br>
           I graduated in the Spring of 2019 from the University of Oregon
           with a double B.S in Computer Science and Economics, along with a minor in Business Administration.
           My proficiency with computer science fundamentals informs my industry work, where I am eager to both educate
           and learn from those with different backgrounds.
+          <br>
           <br>
           Outside of work, I'm a casual mountaineer (With goals of checking off all of the major Cascade Volcanoes),
           daring skier, and cautious motorcyclist. I'll take good conversation over anything,
@@ -143,10 +146,8 @@
           <div class="seven columns">
             <h5> To-do Timer </h5>
             <p> A productivity applicaiton developed to gain
-              experience in Javascript and DOM manupulation. Uses the Pomodoro
-              productivity method. Created as a tool I wanted to actually use to
-              keep up with my busy scheudle. A simple app, but I'm hoping
-              to build this out in the future.
+              experience in old school DOM manupulation. Uses the Pomodoro
+              productivity method. A simple app, but a fun learning tool.
             </p>
           </div>
         </div>
