--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <div class="about">
         <h3> About me </h3>
         <p>
-          I’m Quinn, a software engineer. Currently, I'm a "Senior Cloud Engineer" with Nike's Valiant Labs team.
+          I’m Quinn, a software engineer. Currently a Senior Cloud Engineer wotj Nike's Valiant Labs.
           My work focuses on API design, development, and deployment using modern cloud technologies. I have
           professional experience with database noSQL database design,
           (specializing in Dynamo single-tables), serverless deployments, CI/CD,
-          and scalable, highly performant services.
+          and building scalable, highly performant services.
           <br>
           <br>
           I'm passionate about clean, functional, maintainable code. I try never commit code that couldn't be
