--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="about">
         <h3> About me </h3>
         <p>
-          I’m Quinn, a software engineer. Currently a Senior Cloud Engineer wotj Nike's Valiant Labs.
+          I’m Quinn, a software engineer. Currently a Senior Cloud Engineer at Nike's Valiant Labs.
           My work focuses on API design, development, and deployment using modern cloud technologies. I have
           professional experience with database noSQL database design,
           (specializing in Dynamo single-tables), serverless deployments, CI/CD,
@@ -42,10 +42,10 @@
           <br>
           <br>
           I'm passionate about clean, functional, maintainable code. I try never commit code that couldn't be
-          succinctly explained to a non-software engineer. I've authored coding standards and held demos on Node best
+          succinctly explained to a non-software-person. I've authored coding standards and led demos on Node best
           practices for my team.
           I take pride in effective communicator, and utilize my experience in business and finance to facilitate
-          communication between business stakeholders and engineering teams.
+          translation between business stakeholders and engineering teams.
           <br>
           <br>
           I graduated in the Spring of 2019 from the University of Oregon
