--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           and building scalable, highly performant services.
           <br>
           <br>
-          I'm passionate about clean, functional, maintainable code. I try never commit code that couldn't be
+          I'm passionate about clean, functional, maintainable code. I try to never commit code that couldn't be
           succinctly explained to a non-software-person. I've authored coding standards and led demos on Node best
           practices for my team.
           I take pride in effective communicator, and utilize my experience in business and finance to facilitate
